--- a/weblog/Template/admin/contactUs_messages.html
+++ b/weblog/Template/admin/contactUs_messages.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="styles.css">
     <style>
         .nav {
-            background-color: #007bff !important;
+            background-color: royalblue !important;
             border-top-right-radius: 15px;
             border-bottom-right-radius: 15px;
             min-height: 260px;
@@ -24,7 +24,7 @@
         }
 
         .nav_total {
-            background-color: #007bff !important;
+            background-color: royalblue !important;
             border-top-right-radius: 15px;
             border-bottom-right-radius: 15px;
             min-height: 260px;
