--- a/weblog/Template/writer/writer.html
+++ b/weblog/Template/writer/writer.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="styles.css">
     <style>
         .nav {
-            background-color: royalblue !important;
+            background-color: #007bff !important;
             border-top-right-radius: 15px;
             border-bottom-right-radius: 15px;
             min-height: 260px;
@@ -24,7 +24,7 @@
         }
 
         .nav_total {
-            background-color: royalblue !important;
+            background-color: #007bff !important;
             border-top-right-radius: 15px;
             border-bottom-right-radius: 15px;
             min-height: 260px;
@@ -174,10 +174,10 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-8">
-                            <h1>Unconfirmed comments</h1>
+                            <h1>Dashboard</h1>
                         </div>
                         <div class="col-md-4">
-                            <div class="d-flex align-items-center justify-content-end" style="padding-left: 483px">
+                            <div class="d-flex align-items-center justify-content-end" style="padding-left: 580px">
                                 <b class="mb-0" id="admin-name">Ali Alizadeh</b>
                                 <img src="./photos/profile-photo.png" class="rounded-circle mr-2" width="60"
                                      height="60">
@@ -186,18 +186,83 @@
                     </div>
                 </div>
 
-                <!--                write messages display here-->
+
+                <div class="row" style="margin-top: 40px">
+                    <div class="col-sm-3 col-md-3">
+                        <div class="card bg-Secondary w-100" style="margin-right: 10px">
+                            <div class="card-body">
+                                <h5 class="card-title text-info">Total posts:</h5>
+                                <!--                                <p class="card-text"> 200</p>-->
+                                <!--                                <h2>&emsp;200 <h6> &nbsp;posts</h6></h2>-->
+                                <h1 id="posts-num" class="text-center" style="margin-bottom: 0;">214301</h1><h6
+                                    class="text-center">&emsp;posts</h6><br style="margin-bottom: 0">
+                                <!--                                <a href="#" class="btn btn-info float-right " style="min-width: 45px;">&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;all posts&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;</a>-->
+                                <div class="center">
+                                    <a href="posts.html" class="btn btn-info float-right " style="width: 100%">all posts</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-3 col-md-3">
+                        <div class="card bg-Secondary w-100">
+                            <div class="card-body">
+                                <h5 class="card-title text-info">My posts:</h5>
+                                <!--                                <p class="card-text"> 200</p>-->
+                                <!--                                <h2>&emsp;200 <h6> &nbsp;posts</h6></h2>-->
+                                <h1 id="myPosts-num" class="text-center" style="margin-bottom: 0;">100</h1><h6
+                                    class="text-center">&emsp;my posts</h6><br style="margin-bottom: 0">
+                                <div class="center">
+                                    <a href="myPosts.html" class="btn btn-info float-right " style="width: 100%">my posts</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-3 col-md-3">
+                        <div class="card bg-Secondary w-100">
+                            <div class="card-body">
+                                <h5 class="card-title text-info">Unconfirmed comments:</h5>
+                                <!--                                <p class="card-text"> 200</p>-->
+                                <!--                                <h2>&emsp;200 <h6> &nbsp;posts</h6></h2>-->
+                                <h1 id="comments-num" class="text-center" style="margin-bottom: 0;">3453</h1><h6
+                                    class="text-center">&emsp;comments</h6><br style="margin-bottom: 0">
+                                <div class="center">
+                                    <a href="unconfirmed_comments.html" class="btn btn-info float-right " style="width: 100%">unconfirmed
+                                        comments</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-3 col-md-3">
+                        <div class="card bg-Secondary w-100">
+                            <div class="card-body">
+                                <h5 class="card-title text-info">Contact us messages:</h5>
+                                <!--                                <p class="card-text"> 200</p>-->
+                                <!--                                <h2>&emsp;200 <h6> &nbsp;posts</h6></h2>-->
+                                <h1 id="contactUs-num" class="text-center" style="margin-bottom: 0;">54786</h1><h6
+                                    class="text-center">&emsp;user messages</h6><br style="margin-bottom: 0">
+                                <div class="center">
+                                    <a href="contactUs_messages.html" class="btn btn-info float-right " style="width: 100%">messages</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
                 <div class="card" style="margin-top: 25px">
                     <div class="card-header">
                         Quote
                     </div>
                     <div class="card-body">
                         <blockquote class="blockquote mb-0">
-                            <p>Designing websites with the user in mind is not just a nice-to-have; it's a necessity.
-                                Users come to your site with a goal in mind, whether it's to find information, make a
-                                purchase, or connect with others. Your job as a designer is to understand these goals
-                                and create a site that makes it easy for users to achieve them.</p>
-                            <footer class="blockquote-footer"><cite title="Source Title">Jakob Nielsen</cite>
+                            <p>Freedom is the will to be responsible to ourselves. It is to preserve the distance which
+                                separates us from other men. To grow more indifferent to hardship, to severity, to
+                                privation, and even to life itself. To be proud and sure of ourselves without
+                                selfishness. To be so free in spirit that we can truly love the one we love. To
+                                apprehend the beauty of the earth in silence. To feel the joy of solitude. To be able to
+                                withstand criticism without resentment and to refuse praise without arrogance. To be
+                                able to hear, to see, and to feel, and never to forget that these sensations are a gift
+                                from God and constitute the real meaning of life.</p>
+                            <footer class="blockquote-footer"><cite title="Source Title">Michael Oakeshott</cite>
                             </footer>
                         </blockquote>
                     </div>
