temp all writer pages

--- a/weblog/Template/writer/profile.html
+++ b/weblog/Template/writer/profile.html
@@ -45,31 +45,10 @@
 <div>
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="writer.html">Writer Home</a></li>
-<!--            <li class="breadcrumb-item active" aria-current="page">Posts</li>-->
+            <li class="breadcrumb-item"><a href="writer.html">Writer</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Profile</li>
         </ol>
     </nav>
-    <div class="card">
-        <div class="row no-gutters">
-            <div class="col-md-4">
-                <img src="./photos/idea.png" class="card-img" alt="Image" style="width: 400px">
-            </div>
-            <div class="col-md-8">
-                <div class="card-body">
-                    <br>
-                    <h2 class="card-title"><b>Create Post</b></h2><br>
-                    <p class="card-text" style="font-size: 17px">If you happen to have recently come up with a fresh,
-                        innovative notion or
-                        concept that you believe could have a significant impact on the world or your community, I would
-                        highly recommend that you take some time to sit down and craft a thoughtful and well-written
-                        post detailing your idea, as doing so may potentially help you to gain exposure, connect with
-                        like-minded individuals, and ultimately bring your vision to fruition. </p>
-                    <a href="#" class="btn btn-primary btn-sm float-right">Write New Post</a>
-                </div>
-            </div>
-        </div>
-    </div>
-
 </div>
 </body>
 </html>
