--- a/weblog/Template/writer/userPosts.html
+++ b/weblog/Template/writer/userPosts.html
@@ -22,13 +22,13 @@
                     <a class="nav-link" aria-current="page" href="writer.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Posts</a>
+                    <a class="nav-link" href="userPosts.html">Posts</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">write</a>
+                    <a class="nav-link" href="createPost.html">write</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">profile</a>
+                    <a class="nav-link" href="profile.html">profile</a>
                 </li>
                 <!--                <li class="nav-item">-->
                 <!--                    <a class="nav-link" href="contact.html">Contact Us</a>-->
