--- a/weblog/Template/writer/userPosts.html
+++ b/weblog/Template/writer/userPosts.html
@@ -49,6 +49,7 @@
             <li class="breadcrumb-item active" aria-current="page">Posts</li>
         </ol>
     </nav>
+<!--    add user posts here-->
 </div>
 </body>
 </html>
