--- a/weblog/Template/writer/writer.html
+++ b/weblog/Template/writer/writer.html
@@ -46,7 +46,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="writer.html">Writer Home</a></li>
-<!--            <li class="breadcrumb-item active" aria-current="page">Posts</li>-->
+            <!--            <li class="breadcrumb-item active" aria-current="page">Posts</li>-->
         </ol>
     </nav>
     <div class="card">
@@ -65,6 +65,46 @@
                         post detailing your idea, as doing so may potentially help you to gain exposure, connect with
                         like-minded individuals, and ultimately bring your vision to fruition. </p>
                     <a href="#" class="btn btn-primary btn-sm float-right">Write New Post</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card" style="margin-top: 10px">
+        <div class="row no-gutters">
+            <div class="col-md-4">
+                <img src="./photos/edit.png" class="card-img" alt="Image" style="width: 400px">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <br>
+                    <h2 class="card-title"><b>Old Posts</b></h2><br>
+                    <p class="card-text" style="font-size: 17px">One effective strategy to enhance the quality of your
+                        previously published written works and ensure they reflect your current level of expertise and
+                        knowledge is to conscientiously edit and revise them, carefully scrutinizing each and every
+                        word, phrase, and sentence for potential areas of improvement, such as clarity, concision,
+                        accuracy, and coherence, and implementing appropriate changes that will elevate the overall
+                        readability and impact of your compositions. </p>
+                    <a href="#" class="btn btn-primary btn-sm float-right">See Old Posts</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card" style="margin-top: 10px">
+        <div class="row no-gutters">
+            <div class="col-md-4">
+                <img src="./photos/avatar.jpg" class="card-img" alt="Image" style="width: 400px">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <br>
+                    <h2 class="card-title"><b>Your Profile</b></h2><br>
+                    <p class="card-text" style="font-size: 17px">Upon accessing your profile, which serves as a digital
+                        representation of your identity on various online platforms, including social media,
+                        professional networks, and online communities, one can readily and easily obtain access to a
+                        vast array of personal information, such as your name, age, gender, location, education,
+                        employment history, hobbies, interests, likes, and dislikes, among other relevant details that
+                        provide insights into your character, background, and preferences. </p>
+                    <a href="#" class="btn btn-primary btn-sm float-right">See Profile</a>
                 </div>
             </div>
         </div>
