admin writer page link added

--- a/weblog/Template/admin/admin.html
+++ b/weblog/Template/admin/admin.html
@@ -147,6 +147,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link text-light" href="../writer/writer.html">
+                            Writer page
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link text-light" href="../about.html">
                             About us page
                         </a>
