home page links for buttons added

--- a/weblog/Template/writer/writer.html
+++ b/weblog/Template/writer/writer.html
@@ -64,7 +64,7 @@
                         highly recommend that you take some time to sit down and craft a thoughtful and well-written
                         post detailing your idea, as doing so may potentially help you to gain exposure, connect with
                         like-minded individuals, and ultimately bring your vision to fruition. </p>
-                    <a href="#" class="btn btn-primary btn-sm float-right">Write New Post</a>
+                    <a href="createPost.html" class="btn btn-primary btn-sm float-right">Write New Post</a>
                 </div>
             </div>
         </div>
@@ -84,7 +84,7 @@
                         word, phrase, and sentence for potential areas of improvement, such as clarity, concision,
                         accuracy, and coherence, and implementing appropriate changes that will elevate the overall
                         readability and impact of your compositions. </p>
-                    <a href="#" class="btn btn-primary btn-sm float-right">See Old Posts</a>
+                    <a href="userPosts.html" class="btn btn-primary btn-sm float-right">See Old Posts</a>
                 </div>
             </div>
         </div>
@@ -104,7 +104,7 @@
                         vast array of personal information, such as your name, age, gender, location, education,
                         employment history, hobbies, interests, likes, and dislikes, among other relevant details that
                         provide insights into your character, background, and preferences. </p>
-                    <a href="#" class="btn btn-primary btn-sm float-right">See Profile</a>
+                    <a href="profile.html" class="btn btn-primary btn-sm float-right">See Profile</a>
                 </div>
             </div>
         </div>
