--- a/weblog/Template/signup.html
+++ b/weblog/Template/signup.html
@@ -7,47 +7,27 @@
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 	<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 	<style>
-
 		form { margin: 0px 10px; }
-
 		h2 {
 		  margin-top: 2px;
 		  margin-bottom: 2px;
 		}
-
 		.container { max-width: 360px;
 		margin-top: 50px;
 		}
-
-		.divider {
-		  text-align: center;
-		  margin-top: 20px;
-		  margin-bottom: 5px;
-		}
-
 		.divider hr {
 		  margin: 7px 0px;
 		  width: 35%;
 		}
-
-		.left { float: left; }
-
-		.right { float: right; }
-
 	</style>
-
 </head>
 
 <body>
-
-
-<!------ Include the above in your HEAD tag ---------->
-
     <div class="container">
 		<div class="row">
 			<div class="panel panel-primary">
 				<div class="panel-body">
-					<form method="POST" action="#" role="form">
+					<form method="POST" action="/users/" onsubmit="signup(event, this)">
 						<div class="form-group">
 							<h2>Create account</h2>
 						</div>
@@ -59,19 +39,17 @@
 							<label class="control-label" for="signupEmail">Email</label>
 							<input id="signupEmail" type="email" maxlength="50" class="form-control">
 						</div>
-
 						<div class="form-group">
 							<label class="control-label" for="signupPassword">Password</label>
 							<input id="signupPassword" type="password" maxlength="25" class="form-control" placeholder="at least 8 characters" length="40">
 						</div>
 						<div class="form-group">
-							<label class="control-label" for="signupPasswordagain">Password again</label>
-							<input id="signupPasswordagain" type="password" maxlength="25" class="form-control">
+							<label class="control-label" for="signupPasswordAgain">Password again</label>
+							<input id="signupPasswordAgain" type="password" maxlength="25" class="form-control">
 						</div>
 						<div class="form-group">
 							<button id="signupSubmit" type="submit" class="btn btn-info btn-block">Create your account</button>
 						</div>
-<!--						<p class="form-group">By creating an account, you agree to our <a href="#">Terms of Use</a> and our <a href="#">Privacy Policy</a>.</p>-->
 						<hr>
 						<p></p>Already have an account? <a href="login.html">Sign in</a>
 						<p>Return <a href="home.html">Home</a> </p>
@@ -80,6 +58,19 @@
 			</div>
 		</div>
 	</div>
-
+<script>
+	async function signup(event, el){
+		event.preventDefault()
+		let response = await fetch(
+			el.action, {method: el.method, headers: {"Content-Type": "application/json"}, 
+		body: JSON.stringify({
+			email: el.querySelector("#signupEmail").value,
+			password: el.querySelector("#signupPassword").value,
+			name: el.querySelector("#signupName").value,
+			confirm_pass: el.querySelector("#signupPasswordAgain").value,
+		})}
+		)
+	}
+</script>
 </body>
 </html>
