--- a/weblog/Template/login.html
+++ b/weblog/Template/login.html
@@ -7,68 +7,77 @@
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 	<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 	<style>
-
 		form { margin: 0px 10px; }
-
 		h2 {
 		  margin-top: 2px;
 		  margin-bottom: 2px;
 		  text-align: center;
 		}
-
 		.container { max-width: 360px;
 		margin-top: 50px;
 		}
-
-		.divider {
-		  text-align: center;
-		  margin-top: 20px;
-		  margin-bottom: 5px;
-		}
-
 		.divider hr {
 		  margin: 7px 0px;
 		  width: 35%;
 		}
-
-		.left { float: left; }
-
-		.right { float: right; }
-
 	</style>
-
 </head>
-
 <body>
     <div class="container">
 		<div class="row">
 			<div class="panel panel-primary">
 				<div class="panel-body">
-					<form method="POST" action="#" role="form">
+					<form method="POST" action="/login" onsubmit="login(event, this)">
 						<div class="form-group">
 							<h2>Log In</h2>
 						</div>
-
 						<div class="form-group">
-							<label class="control-label" for="signupEmail">Email Address</label>
-							<input id="signupEmail" type="email" maxlength="50" class="form-control">
+							<label class="control-label" for="loginEmail">Email Address</label>
+							<input id="loginEmail" type="email" maxlength="50" class="form-control">
 						</div>
-
 						<div class="form-group">
-							<label class="control-label" for="signupPassword">Password</label>
-							<input id="signupPassword" type="password" maxlength="25" class="form-control" placeholder="at least 8 characters" length="40">
+							<label class="control-label" for="loginPassword">Password</label>
+							<input id="loginPassword" type="password" maxlength="25" class="form-control" placeholder="at least 8 characters" length="40">
+							<input type="checkbox" onclick="showPass()">Show Password
 						</div>
-
 						<div class="form-group">
-							<button id="signupSubmit" type="submit" class="btn btn-info btn-block">Log In</button>
+							<button id="loginSubmit" type="submit" class="btn btn-info btn-block">Log In</button>
 						</div>
 						<hr>
-						<p></p>Don't have an account? <a href="signup.html">Sign Up</a>
-						<p>Return <a href="home.html">Home</a> </p>
+						<p></p>Don't have an account? <a href="/signup/">Sign Up</a>
+						<p>Return <a href="/home/">Home</a> </p>
 					</form>
 				</div>
 			</div>
 		</div>
 	</div>
+<script>
+	async function login(event, el){
+		event.preventDefault()
+		let response = await fetch(
+			el.action, {method: el.method, headers: {"Content-Type": "application/json"},
+		body: JSON.stringify({
+			email: el.querySelector("#loginEmail").value,
+			password: el.querySelector("#loginPassword").value
+		})}
+		)
+		if (response.status === 200){
+			alert("Welcome to our blog")
+			window.location.replace("/home/")
+		}
+		else {
+			alert("Invalid username or password")
+		}
+	}
+	function showPass() {
+		let x = document.getElementById("loginPassword");
+		if (x.type === "password") {
+    		x.type = "text";
+  		}
+		else {
+    		x.type = "password";
+  		}
+	}
+</script>
 </body>
 </html>
