--- a/weblog/Template/signup.html
+++ b/weblog/Template/signup.html
@@ -21,13 +21,12 @@
 		}
 	</style>
 </head>
-
 <body>
     <div class="container">
 		<div class="row">
 			<div class="panel panel-primary">
 				<div class="panel-body">
-					<form method="POST" action="/users/" onsubmit="signup(event, this)">
+					<form method="POST" action="/users/register/" onsubmit="signup(event, this)">
 						<div class="form-group">
 							<h2>Create account</h2>
 						</div>
@@ -42,17 +41,19 @@
 						<div class="form-group">
 							<label class="control-label" for="signupPassword">Password</label>
 							<input id="signupPassword" type="password" maxlength="25" class="form-control" placeholder="at least 8 characters" length="40">
+							<input type="checkbox" onclick="showPass()">Show Password
 						</div>
 						<div class="form-group">
 							<label class="control-label" for="signupPasswordAgain">Password again</label>
 							<input id="signupPasswordAgain" type="password" maxlength="25" class="form-control">
+							<input type="checkbox" onclick="showPassAgain()">Show Password
 						</div>
 						<div class="form-group">
 							<button id="signupSubmit" type="submit" class="btn btn-info btn-block">Create your account</button>
 						</div>
 						<hr>
-						<p></p>Already have an account? <a href="login.html">Sign in</a>
-						<p>Return <a href="home.html">Home</a> </p>
+						<p></p>Already have an account? <a href="/login/">Sign in</a>
+						<p>Return <a href="/home/">Home</a> </p>
 					</form>
 				</div>
 			</div>
@@ -70,6 +71,31 @@
 			confirm_pass: el.querySelector("#signupPasswordAgain").value,
 		})}
 		)
+		if (response.status === 201){
+			alert("Account Created")
+			window.location.replace("/")
+		}
+		else {
+			alert("Check your information again")
+		}
+	}
+	function showPass() {
+		let x = document.getElementById("signupPassword");
+		if (x.type === "password") {
+    		x.type = "text";
+  		}
+		else {
+    		x.type = "password";
+  		}
+	}
+	function showPassAgain() {
+		let x = document.getElementById("signupPasswordAgain");
+		if (x.type === "password") {
+    		x.type = "text";
+  		}
+		else {
+    		x.type = "password";
+  		}
 	}
 </script>
 </body>
