Links to other pages on navbar fixed

--- a/weblog/Template/contact.html
+++ b/weblog/Template/contact.html
@@ -17,25 +17,25 @@
         <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item active">
-                    <a class="nav-link" aria-current="page" href="home.html">Home</a>
+                    <a class="nav-link" aria-current="page" href="/home/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="posts.html">Posts</a>
+                    <a class="nav-link" href="/posts/">Posts</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Admin</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html">About US</a>
+                    <a class="nav-link" href="/about/">About US</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact Us</a>
+                    <a class="nav-link" href="/contact_us/">Contact Us</a>
                 </li>
             </ul>
         </div>
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="signup.html" class="bg-primary"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-            <li><a href="login.html" class="bg-primary"><span class="glyphicon glyphicon-log-in" ></span> Login</a></li>
+            <li><a href="/signup/" class="bg-primary"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li><a href="/login/" class="bg-primary"><span class="glyphicon glyphicon-log-in" ></span> Login</a></li>
         </ul>
     </div>
 </nav>
