--- a/weblog/Template/root.html
+++ b/weblog/Template/root.html
@@ -17,7 +17,7 @@
     </div>
 
 <div class="d-grid gap-2 col-6 mx-auto" style="margin-top: 5%">
-  <a href="home.html" class="btn btn-primary" role="button">Visit Weblog</a>
-  <a href="login.html" class="btn btn-primary" role="button">User login</a>
+  <a href="/home/" class="btn btn-primary" role="button">Visit Weblog</a>
+  <a href="/login/" class="btn btn-primary" role="button">User login</a>
   <a href="#" class="btn btn-primary" role="button">Admin login</a>
 </div>
