--- a/weblog/Template/post.html
+++ b/weblog/Template/post.html
@@ -17,7 +17,9 @@
     .row{
         margin-left: 10px;
     }
+    hr{ border-color: #0a2fe3;
 
+    }
   </style>
 </head>
 <body>
@@ -27,20 +29,20 @@
     <h2>Group Five</h2>
   </div>
 </div>
-<a href="{{ url_for('get_post', id=post.id) }}" class="post">
+<!--<a href="{{ url_for('get_post', id=post.id) }}" class="post"></a>-->
 
 <div class="col-sm-9  mb-10 ">
               <h2>{{ post.title }}</h2>
-              <h5><span class="glyphicon glyphicon-time"></span> Post by {{ post.owner.name }}, Sep 24, 2015.</h5>
+              <h5><span class="glyphicon glyphicon-time"></span> Post by {{ post.owner.name }}, {{ post.created_at }}</h5>
               <br>
                <p><b>Description</b>: <span>{{ post.content }}</span></p>
 
               <br>
-              <hr>
+
               <h4>Leave a Comment:</h4>
-              <form role="form">
+              <form method="POST" id="{{post.id}}" action="/comments/"  onsubmit="add_comment(event, this)">
                 <div class="form-group">
-                  <textarea class="form-control" rows="3" required></textarea>
+                  <textarea class="form-control" rows="3" id="NewComment"  required></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary ">Submit</button>
               </form>
@@ -48,23 +50,44 @@
         <!--number of comments-->
               <p><span class="badge">{{num}}</span> Comments:</p><br>
 
-</a>
 
-{% for comment in post.comments %}
-<a href="{{ url_for('get_post', id=post.id) }}" class="post">
-              <div class="row ">
+
+ {% for comment in comments %}
+<!-- <a href="{{ url_for('get_post', id=post.id) }}" class="post"></a>-->
+           <div class="row ">
               <div class="row ">
                   <div class="col-sm-10">
-                      <h5>{{ comment.owner.name }} <small>Sep 29, 2015, 9:12 PM</small></h5>
+                      <h5>{{ comment.owner.name }}  <small>-  {{ comment.created_at}} </small></h5>
 <!--                      <p>Keep up the GREAT work! I am cheering for you!! </p>-->
                       <p>{{ comment.text }} </p>
+                      <hr>
                       <br>
                   </div>
               </div>
-
+           </div>
 {% endfor %}
      </div>
 
+<script>
+     async function add_comment(event, el){
+        event.preventDefault()
+        let response = await fetch(
+        el.action, {method: el.method, headers: {"Content-Type": "application/json"},
+		body: JSON.stringify({
+		post_id: el.id,
+		text: el.querySelector("#NewComment").value
+		})
+		}
+		)
+ alert(response.status)
+		if (response.status === 200){
+          alert(" Your comment will be displayed after admin approval.")
+           window.location.replace("/")
+      } else {
+           alert(" Error: Please comment again")}}
+
+
+</script>
 
 </body>
 </html>
