--- a/weblog/Template/root.html
+++ b/weblog/Template/root.html
@@ -19,5 +19,5 @@
 <div class="d-grid gap-2 col-6 mx-auto" style="margin-top: 5%">
   <a href="/home/" class="btn btn-primary" role="button">Visit Weblog</a>
   <a href="/login/" class="btn btn-primary" role="button">User login</a>
-  <a href="#" class="btn btn-primary" role="button">Admin login</a>
+  <a href="/admin/" class="btn btn-primary" role="button">Admin login</a>
 </div>
